<resources>
    <string name="app_name">EP3_Devops_Faith</string>
    <string name="com_auth0_scheme">demo</string>
    <string name="authenticate">Authenticate</string>
    <string name="log_out">Log out</string>
    <string name="log_in_using_the_browser">Log in using the Browser</string>
    <string name="metadata">Metadata</string>
    <string name="use_the_buttons_and_text_box_below_to_patch_the_Name_field_from_user_metadata">Use the buttons and text box below to patch the \'Name\' field from \'user_metadata\'</string>
    <string name="get">Get</string>
    <string name="patch">Patch</string>
    <string name="authDomain">dev-xoy1aufd.us.auth0.com</string>
    <string name="authClientId">1ZepKwkI3cpx4jgE6PBZR6Y3foosefle</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="go_home">Go Home</string>
    <string name="role">Role</string>
    <string name="avatar">Avatar</string>
    <string name="update_profile">Update profile</string>
    <string name="edit_your_name_here">Edit your name here</string>
    <string name="edit_your_role_here">Edit your role here</string>
    <string name="profile">profile</string>
    <string name="add_image">add image</string>
    <string name="description">description</string>
    <string name="links">links</string>
    <string name="image_post">image post</string>
    <string name="a_new_post">A new post is written here</string>
    <string name="write_your_post_description_here">Write your post description here</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="add_post">Add post</string>
    <string name="post_overview">Overview</string>
    <string name="image_provided_by_the_user">Image provided by the user</string>
    <string name="add_your_link_here">Add your link here</string>
    <string name="testLink">www.youtube.com</string>
    <string name="actual_comment">Actual Comment</string>
    <string name="enter_comment">Enter Comment...</string>
    <string name="delete_button">delete button</string>
    <string name="Enum_Answered">ANSWERED</string>
    <string name="Enum_Read">READ</string>
    <string name="Enum_New">NEW</string>
    <string name="Type_Jongere">Jongere</string>
    <string name="favorite">favorite</string>
    <string name="login">Login</string>
    <string name="movie">Movie</string>

</resources>