<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="postViewModel"
            type="com.example.ep3_devops_faith.ui.post.detail.PostDetailViewModel" />
        <variable
            name="commentViewModel"
            type="com.example.ep3_devops_faith.ui.comment.read.CommentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.ep3_devops_faith.ui.post.detail.PostDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_photo_image"
                android:layout_width="match_parent"
                android:layout_height="266dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:postImage="@{postViewModel.selectedProperty}"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/property_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{postViewModel.selectedProperty.text}"
                android:textColor="#de000000"
                android:textSize="39sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_photo_image"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/property_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="web"
                android:minHeight="48dp"
                android:text="@{postViewModel.selectedProperty.link}"
                android:textColor="#009688"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/property_name_text"
                tools:ignore="TextContrastCheck"
                tools:text="@string/testLink" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="6dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:listDataComment="@{commentViewModel.comments}"
                tools:itemCount="16"
                tools:listitem="@layout/comments" />
            <RelativeLayout
                android:id="@+id/commentsa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/commentAvatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:srcCompat="@tools:sample/avatars"
                    />

                <EditText
                    android:id="@+id/typeComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/sendComment"
                    android:layout_toEndOf="@id/commentAvatar"
                    android:background="@color/white"
                    android:hint="@string/enter_comment"
                    android:inputType="textCapSentences|textMultiLine"
                    android:padding="15dp"
                    android:autofillHints="" />

                <ImageButton
                    android:id="@+id/sendComment"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/white"
                    android:src="@android:drawable/ic_menu_send"
                    android:onClickListener="@{() -> commentViewModel.saveCommentClick()}"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>